# binance-spot-connector-rust

./: Cargo.toml
