[package]
name = "binance_spot_connector_rust"
version = "1.1.0"
authors = ["Binance"]
edition = "2021"
resolver = "2"
autoexamples = false
description = "This is a lightweight library that works as a connector to the Binance public API"
readme = "README.md"
repository = "https://github.com/binance/binance-connector-rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["enable-ureq", "enable-tungstenite"]
enable-hyper = [ "hyper", "hyper-tls", "serde_json", "futures-util", "tokio" ]
enable-ureq = [ "ureq", "serde_json" ]
enable-tungstenite = ["tungstenite"]
enable-tokio-tungstenite = ["tokio-tungstenite"]
full = ["enable-hyper", "enable-tungstenite", "enable-ureq", "enable-tokio-tungstenite"]

[dependencies]
hmac = "0.12.1"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false, features = ["oid"] }
url = "2.5.0"
rust_decimal = "1.34"
http = "1.1"
strum = { version = "0.26", features = ["derive"] }
rand = "0.8.5"
signature = "2.2.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["serde", "zeroize", "rand_core", "digest", "pkcs8", "pem"] }

# enable-ureq
ureq = { version = "2.9", optional = true }

# enable-hyper
hyper = { version = "1.2", features = ["full"], optional = true }
serde_json = { version = "1.0", optional = true }
hyper-tls = {version = "0.6", optional = true }
futures-util = {version = "0.3", optional = true }
tokio = { version = "1", features = ["time"], optional = true }

# enable-tungstenite
tungstenite = {version = "0.21", features = ["native-tls"], optional = true}

# enable-tokio-tungstenite
tokio-tungstenite = {version = "0.21", features = ["native-tls"], optional = true}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
tower = "0.4"
rust_decimal_macros = "1.34"
cargo-audit = "0.20"
